5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1637_2446.log
== TEST (2019-04-11 11:14:03) 
-- CODE:
s = int(input("insira senha: "))

a = s//1000000
print(a)
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:14:44) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
print(a)
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:18:40) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10


print(b)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:19:06) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10


print(a,b,c,d,e,f)
-- OUTPUT:
0 8 7 6 1 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:26:28) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	mgs("acesso liberado")
else:
	msg("senha invalida")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    mgs("acesso liberado")
NameError: name 'mgs' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:04) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	mgs=("acesso liberado")
else:
	msg=("senha invalida")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:14) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	mgs=("acesso liberado")
else:
	msg=("senha invalida")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:27:56) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	mgs=("acesso liberado")
else:
	msg=("senha invalida")
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:34) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	mgs=("acesso liberado")
else:
	msg=("senha invalida")
	

print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:28:53) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	mgs=("acesso liberado")
else:
	msg=("senha invalida")
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:29:17) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	mgs=("acesso liberado")
else:
	msg=("senha invalida")

	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(msg)
NameError: name 'msg' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:30:20) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	msg =("acesso liberado")
else:
	msg =("senha invalida")

print(msg)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:30:33) 
-- CODE:
s = int(input("insira senha: "))

a = s//100000
b = s//10000%10
c= s//1000%10
d = s//100%10
e = s//10%10
f= s % 10

x = (b+d+f)
y =(a+c+e)

if (x%y==0):
	msg =("acesso liberado")
else:
	msg =("senha invalida")

print(msg)
-- EXECUTION TIME:
0.245403
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
